--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,10 +3,11 @@ body {
     margin: 0px;
     height: 100vh;
     overflow: hidden;
+    color: #ffffff;
+    background: #141419;
 }
 
 .container {
-    background-color: #ffffff;
     display: flex;
 }
 
@@ -14,134 +15,146 @@ body {
     position: relative;
     width: 300px;
     height: 100vh;
-    background-color: #f0f0f0;
-    /* border-radius: 10px 0 0 10px; */
+    background-color: rgb(255 255 255 / 2%);
+    
+}
+.leftHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0;
 }
 
 .add-project-btn {
-    width: 280px;
     margin: 10px;
-    padding: 10px;
+    padding: 6px 20px;
+    background-color: rgb(0 102 255 / 100%);
+    color: #ffffff;
+    transition: background-color 0.1s, color 0.3s;
+    border-radius: 999px;
+    border: 0;
 }
 
-.email-notification {
-    /* width: 280px; */
-    margin: 10px;
-    padding: 5px 10px;
+.add-project-btn:focus {
+    background-color: rgb(0 102 255 / 95%);
+    color: #ffffff;
+}
+.add-project-btn:hover {
+    background-color: rgb(0 102 255 / 90%);
+    color: #ffffff;
 }
 
+
+
+
+.rightHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .add-task-btn {
     width: 100%;
     margin: 10px 0;
     padding: 10px;
+    background-color: rgb(0 102 255 / 100%);
+    color: #ffffff;
+    transition: background-color 0.1s, color 0.3s;
+    border-radius: 999px;
+    border: 0;
+}
+.add-task-btn:focus {
+    background-color: rgb(0 102 255 / 95%);
+    color: #ffffff;
+}
+.add-task-btn:hover {
+    background-color: rgb(0 102 255 / 90%);
+    color: #ffffff;
 }
 
-.create-report {
-    /* width: 100%; */
+button.create-report {
     margin: 10px 0;
-    padding: 10px;
+    padding: 3px 10px;
+    background-color: rgb(255 255 255 / 10%);
+    color: rgb(255 255 255 / 90%);
+    transition: background-color 0.1s, color 0.3s;
+    border-radius: 999px;
+    border: 0;
 }
-
-
+button.create-report:hover {
+    background-color: rgb(255 255 255 / 20%);
+    color: rgb(255 255 255 / 100%);
+    transition: background-color 0.1s, color 0.3s;
+}
 
 .project-list {
     padding: 0 10px;
-    height: 73vh;
+    height: 81vh;
     overflow: hidden;
     overflow-y: auto;
 }
 
-.settings {
+.leftFooter {
+    width: 100%;
     position: absolute;
     bottom: 0px;
-    background: #f0f0f0;
+    margin: 10px;
 }
+.leftFooter button {
+    /* width: 100%; */
+    border: 0;
+    border-radius: 5px;
+    margin: 5px;
+    background-color: rgb(255 255 255 / 10%);
+    color: rgb(255 255 255 / 50%);
+    padding: 2px 10px;
+    transition: background-color 0.1s, color 0.1s;
+}
+.leftFooter button:hover {
+    background-color: rgb(255 255 255 / 30%);
+    color: #ffffff;
+}
+.settings {
+    /* background: #f0f0f0; */
+}
+
+.email-notification {
+    /* width: 280px; */
+    /* margin: 10px;
+    padding: 5px 10px; */
+}
+
 
 .project-item.selected {
     color: #ffffff;
-    background-color: #04004c;
-    /* 或者其他您想要的样式 */
+    background-color: rgb(255 255 255 / 5%);
 }
 
 .project-item {
-    background-color: #fff;
-    /* 默认背景颜色 */
-    color: #000;
-    /* 默认文本颜色 */
-    transition: background-color 0.3s, color 0.3s;
-    /* 添加过渡效果，0.3秒的持续时间 */
+    background-color: rgb(255 255 255 / 0%);
+    color: #fff;
+    transition: background-color 0.1s, color 0.1s;
+    
+    display: block;
+    margin: 10px 0;
+    padding: 5px 10px;
+    border-radius: 5px;
+    position: relative;
+    text-decoration: none;
+    word-break: break-all;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    line-height: 180%;
 }
-
 .project-item:hover {
-    background-color: rgb(13 0 255 / 15%);
+    background-color: rgb(255 255 255 / 3%);
     /* color: #ffffff; */
 }
 
 
 
-
-
-
-.task-info {
-    background-color: #f0f0f0;
-    border-radius: 5px;
-    /* width: 480px; */
-    margin: 10px;
-    /* padding: 5px 10px; */
-}
-
-.task-detail {
-    padding: 5px 10px;
-    background-color: #9ad58f;
-    border-radius: 5px 5px 0 0;
-}
-
-.task-status {
-    background-color: #f0f0f0;
-    font-size: 0.8rem;
-    display: flex;
-    /* padding: 10px; */
-    /* margin-top: 10px; */
-}
-
-.status-section {
-    margin: 10px;
-    border-right: 2px solid #d22222;
-    padding-right: 10px;
-}
-
-.task-path {
-    font-size: 0.8rem;
-    border-radius: 0 0 5px 5px;
-    border-top: 1px solid #cecece;
-    background-color: #f0f0f0;
-    padding: 5px 10px;
-    /* margin-top: 10px; */
-}
-
-
-.task-creation-section {
-    height: 74vh;
-    overflow: hidden;
-    overflow-y: auto;
-}
-
-
-
-
-.project-item {
-    position: relative;
-    /* 其他样式 */
-}
-
-.delete-btn {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    display: none;
-    /* 其他样式 */
-}
 
 .project-item:hover .delete-btn {
     display: block;
@@ -149,17 +162,6 @@ body {
 .project-list p {
     margin: 10px 0;
     font-weight: 600;
-}
-
-.project-item {
-    display: block;
-    margin: 10px 0;
-    padding: 20px 10px;
-    background-color: #ffffff;
-    border-radius: 10px;
-    position: relative;
-    text-decoration: none;
-    /* 移除超链接下划线 */
 }
 
 .project-item span {
@@ -181,6 +183,75 @@ body {
     background-color: #9a9a9a;
 }
 
+
+
+.delete-btn {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: none;
+    border-radius: 999px;
+    font-size: 0.7rem;
+    border: 0;
+    padding: 1px 5px;
+    background: #ff0000;
+    color: #ffffff;
+    transition: background-color 0.1s, color 0.1s;
+}
+.delete-btn:hover {
+    background: #b30000;
+    color: #e9e9e9;
+}
+
+
+.task-info {
+    background-color: rgb(255 255 255 / 10%);
+    border-radius: 5px;
+    margin: 10px;
+    /* padding: 5px 10px; */
+    line-height: 180%;
+}
+.task-detail {
+    padding: 5px 10px;
+    background-color: #3a2dff;
+    border-radius: 5px 5px 0 0;
+    position: relative;
+}
+
+.task-status {
+    /* background-color: #f0f0f0; */
+    font-size: 0.8rem;
+    display: flex;
+    /* padding: 10px; */
+    /* margin-top: 10px; */
+}
+
+.status-section {
+    margin: 10px;
+    border-right: 2px solid #d22222;
+    padding-right: 10px;
+}
+
+.task-path {
+    font-size: 0.8rem;
+    border-radius: 0 0 5px 5px;
+    border-top: 1px solid #484848;
+    padding: 10px 10px;
+    color: rgb(255 255 255 / 50%);
+    line-height: 120%;
+    position: relative;
+}
+
+
+.task-creation-section {
+    height: 74vh;
+    overflow: hidden;
+    overflow-y: auto;
+}
+
+
+
 .right-panel {
     flex-grow: 1;
     padding: 10px;
@@ -195,34 +266,23 @@ body {
 
 
 
-.popup-content {
-    margin: 10px;
-}
 
-
-
-.popup-header {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-}
-
-
-.path-preview,
-.copy-mode {
+.path-preview, .copy-mode {
     margin: 10px 0;
     padding: 10px;
-    background-color: #f0f0f0;
+    background-color: rgb(255 255 255 / 2%);
     border-radius: 5px;
+    font-size: 0.9rem;
+    color: rgb(255 255 255 / 80%);
 }
 
-.popup-actions {
-    text-align: right;
-}
 
-.popup-actions button {
-    margin-left: 10px;
+.pathPreviewTitle, .copyModeTitle{
+    font-size: 0.8rem;
+    /* font-weight: 600; */
+    margin-bottom: 5px;
+    color: rgb(255 255 255 / 50%);
 }
-
 
 
 .right-panel {
@@ -245,6 +305,7 @@ body {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); /* 半透明黑色背景 */
     z-index: 10; /* 确保这个值小于弹窗的z-index */
+    backdrop-filter: blur(5px);
 }
 
 
@@ -257,45 +318,114 @@ body {
     top: 50px;
     left: 50%;
     transform: translateX(-50%);
-    /* transform: translate(, -50%); */
-    background-color: #ffffff;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    background-color: rgb(255 255 255 / 5%);
+    border: 1px solid rgb(255 255 255 / 22%);
     border-radius: 10px;
     padding: 20px;
     z-index: 1000;
+    backdrop-filter: blur(10px);
 }
+
+.popup-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.popup-header {
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.popup-content input {
+    width: 90%;
+    background: rgb(255 255 255 / 20%);
+    border: 0;
+    border-radius: 999px;
+    padding: 10px;
+    color: #ffffff;
+    transition: background-color 0.1s, color 0.3s;
+}
+.popup-content input:hover {
+    background: rgb(255 255 255 / 25%);
+}
+
+.popup-footer {
+    margin-top: 20px;
+    display: flex;
+    justify-content: flex-end;
+}
+.popup.AddProject {
+    width: 236px;
+    left: 159px;
+    top: 4rem;
+}
+.popup-footer button {
+    border: 0;
+    border-radius: 999px;
+    width: 100%;
+    margin: 5px;
+}
+
+.confirm-btn{
+    background-color: rgb(0 102 255 / 100%);
+    color: #ffffff;
+    font-size: 1rem;
+    transition: background-color 0.1s, color 0.3s;
+    padding: 5px 20px;
+
+}
+
+.confirm-btn:hover {
+    background-color: rgb(0 102 255 / 85%);
+    color: rgb(255 255 255 / 85%);
+}
+
+
+
 
 .task-popup{
     width: 700px;
 }
 .select-source, .select-target {
-    height: 4rem;
+    height: 5rem;
     border-style: solid;
     border-radius: 10px;
-    border-color: rgba(0,0,0,1);
+    border-color: rgb(255 255 255 / 30%);
     border-width: 1px;
     margin: 10px 0;
+    transition: background-color 0.1s, color 0.3s;
 }
 .select-source-file, .select-target-path {
     height: 4rem;
     width: 100%;
     padding: 10px;
+    word-break: break-all;
 }
 .select-source:hover {
-    border-color: rgb(97 0 182);
-    background-color: aliceblue;
+    border-color: rgb(255 255 255 / 10%);
+    background-color: rgb(255 255 255 / 10%);
 }
 .select-target:hover {
-    border-color: rgb(97 0 182);
-    background-color: aliceblue;
+    border-color: rgb(255 255 255 / 10%);
+    background-color: rgb(255 255 255 / 10%);
 }
 
 .select-source-file span, .select-target-path span {
-    background-color: black;
-    color: antiquewhite;
+    background-color: #333333;
+    color: #c1c1c1;
     position: absolute;
     right: 44px;
     padding: 5px 10px;
     border-radius: 999px;
     font-size: 0.75rem;
+    transition: background-color 0.1s, color 0.3s;
+}
+.select-source-file span:hover, .select-target-path span:hover {
+    background-color: #555555;
+    color: #ffffff;
 }
